correcion inicio_historia_tienda

--- a/vistas/tienda.html
+++ b/vistas/tienda.html
@@ -21,16 +21,16 @@
                     <a href="./index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="./vistas/historia.html">HISTORIA</a>
+                    <a href="../vistas/historia.html">HISTORIA</a>
                 </li>
                 <li>
-                    <a href="./vistas/tienda.html">TIENDA</a>
+                    <a href="../vistas/tienda.html">TIENDA</a>
                 </lis>
                 <li>
-                    <a href="./vistas/galeria.html">GALERÍA</a>
+                    <a href="../vistas/galeria.html">GALERÍA</a>
                 </li>
                 <li>
-                    <a href="./vistas/noticias.html">NOTICIAS</a>
+                    <a href="../vistas/noticias.html">NOTICIAS</a>
                 </li>
             </ul>
     </header>
