--- a/vistas/galeria.html
+++ b/vistas/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Witcher 3</title>
+    <title>Galeria</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../estilos/bootstrap.css">
     <link rel="stylesheet" href="../estilos/styles.css">
@@ -18,19 +18,19 @@
         </nav>
             <ul class="container-fluid d-flex flex-wrap align-items-center justify-content-between animate__animated animate__backInRight">
                 <li>
-                    <a href="./index.html">HOME</a>
+                    <a href="../index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="./vistas/historia.html">HISTORIA</a>
+                    <a href="./historia.html">HISTORIA</a>
                 </li>
                 <li>
-                    <a href="./vistas/tienda.html">TIENDA</a>
+                    <a href="./tienda.html">TIENDA</a>
                 </lis>
                 <li>
-                    <a href="./vistas/galeria.html">GALERÍA</a>
+                    <a href="./galeria.html">GALERÍA</a>
                 </li>
                 <li>
-                    <a href="./vistas/noticias.html">NOTICIAS</a>
+                    <a href="./noticias.html">NOTICIAS</a>
                 </li>
             </ul>
     </header>
