--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col"></div>
-                    <img src="./img/geralt11.jpg" class="col py-2">
+                    <img src="./img/geralt11.jpg" class="col py-2 pt-5">
                     <div class="col"></div>
                 </div>
             </div>
