--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col"></div>
-                    <img src="./img/geralt11.jpg" class="col py-2 pt-5">
+                    <img src="./img/geralt11.jpg" class="col py-2 pt-5" alt="geralt11">
                     <div class="col"></div>
                 </div>
             </div>
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col"></div>
-                    <img src="./img/geralt22.jpg" class="col py-2 pb-5">
+                    <img src="./img/geralt22.jpg" class="col py-2 pb-5" alt="geralt22">
                     <div class="col"></div>
                 </div>
             </div>
