--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./estilos/bootstrap.css">
     <link rel="stylesheet" href="./estilos/styles.css">
+    <link rel="stylesheet" href="./scss/index.scss">
 </head>
 <body id="top" class="">
     <header id="header" class="container-fluid d-flex justify-content-around px-5">
